stack/kubernetes/tools/ingress/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: prometheus-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: "prometheus.o11y.fans"
      http:
        paths:
          - backend:
              service:
                name: prometheus-server
                port:
                  number: 80
            path: /(.*)
            pathType: Prefix
  tls:
    - hosts:
        - "prometheus.o11y.fans"
      secretName: prometheus-tls-cert
